--- a/styles/page.module.css
+++ b/styles/page.module.css
@@ -1,5 +1,26 @@
-.main {
+
+
+.content {
   display: flex;
   flex-direction: column;
-  gap: 32px;
+  justify-content: center;
+  align-items: center;
+}
+
+.buttonsGroup {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 12px;
+}
+
+.title {
+  font-size: 65px;
+  font-weight: 600;
+  text-align: center;
+}
+
+.description {
+  font-size: 25px;
+  text-align: center;
 }
