--- a/styles/page.module.css
+++ b/styles/page.module.css
@@ -1,10 +1,25 @@
+.sectionOne {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
 
+.navigationWrapper {
+    position: sticky;
+    top: 0;
+    z-index: 100;
+}
 
 .content {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.textGroup {
+  margin: 50px 0px;
 }
 
 .buttonsGroup {
@@ -18,6 +33,7 @@
   font-size: 65px;
   font-weight: 600;
   text-align: center;
+  margin-bottom: 7px;
 }
 
 .description {
