--- a/styles/ButtonPersonal.module.css
+++ b/styles/ButtonPersonal.module.css
@@ -4,6 +4,7 @@
     padding: 40px;
     background-color: rgba(255, 255, 255, 0.1);
     border: 1px solid rgba(255, 255, 255, 0.12);
+    backdrop-filter: blur(2px);
     border-radius: 7px;
     display: flex;
     flex-direction: column;
