--- a/styles/page.module.css
+++ b/styles/page.module.css
@@ -3,6 +3,7 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
+  box-shadow: inset 0px -200px 100px #000000; /*sectionTwo shadow*/
 }
 
 .navigationWrapper {
@@ -16,6 +17,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  text-align: center;
 }
 
 .textGroup {
@@ -39,4 +41,46 @@
 .description {
   font-size: 25px;
   text-align: center;
+}
+
+/*sectionTwo*/
+
+.sectionTwo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 30vh;
+  background-color: #000;
+}
+
+.titleSmaller {
+  font-size: 41px;
+  margin-bottom: 15px;
+  font-weight: 600;
+}
+
+.sectionTwoDescription {
+  font-size: 15px;
+  font-weight: 300;
+  text-transform: uppercase;
+}
+
+.buttonSectionTwo {
+  display: flex;
+  justify-content: center; 
+  align-items: center;
+  padding: 7px;
+  transition: all 0.3s ease-out;
+  cursor: pointer;
+}
+
+.buttonSectionTwo:hover {
+  background-color: rgba(100, 100, 100, 0.2);
+  border-radius: 3px;
+}
+
+.buttonSectionTwoText {
+  font-size: 10px;
+  font-weight: bold;
+  text-transform: uppercase;
 }
